--- a/Bootstrap/mine/index.html
+++ b/Bootstrap/mine/index.html
@@ -44,15 +44,83 @@
     </div>
   </nav>
 
-  <section class="container-fluid"></section>
+  <section class="container-fluid px-0">
+    <div class="row align-items-center">
+      <div class="col-lg-6">
+        <div id="headingGroup" class="text-white text-center d-none d-lg-block">
+          <h1 class=""> MUSEUM<span>/</span>OF<span>/</span>CANDY </h1>
+          <h1 class=""> MUSEUM<span>/</span>OF<span>/</span>CANDY </h1>
+          <h1 class=""> MUSEUM<span>/</span>OF<span>/</span>CANDY </h1>
+          <h1 class=""> MUSEUM<span>/</span>OF<span>/</span>CANDY </h1>
+          <h1 class=""> MUSEUM<span>/</span>OF<span>/</span>CANDY </h1>
+          <h1 class=""> MUSEUM<span>/</span>OF<span>/</span>CANDY </h1>
+          <h1 class=""> MUSEUM<span>/</span>OF<span>/</span>CANDY </h1>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <img class="img-fluid" src="imgs/hand2.png" alt="">
+      </div>
+    </div>
+  </section>
+
+  <section class="container-fluid px-0">
+    <div class="row align-items-center content">
+      <div class="col-md-6 order-2 order-md-1"><img class="img-fluid" src="imgs/milk.png" alt=""></div>
+      <div class="col-md-6 text-center order-1 order-md-2">
+        <div class="row justify-content-center blob">
+          <div class="col-10 col-xl-8 mb-5 mb-md-0">
+            <h2>MUSEUM OF CANDIES </h2>
+            <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem placeat necessitatibus nisi. Nihil rem quo dolorem ipsum provident porro unde praesentium sed enim. Voluptates perspiciatis adipisci quam incidunt error molestias quaerat, consequuntur ipsum unde minima in soluta at ab, quia, minus commodi dignissimos? Modi, accusamus quidem iusto quis et ab soluta atque asperiores deleniti sequi eius consequuntur distinctio quae iste placeat obcaecati perspiciatis amet veniam!</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row align-items-center content">
+      <div class="col-md-6 text-center">
+        <div class="row justify-content-center blob">
+          <div class="col-10 col-xl-8">
+            <h2>GumBalls of Candies </h2>
+            <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem placeat necessitatibus nisi. Nihil rem quo dolorem ipsum provident porro unde praesentium sed enim. Voluptates perspiciatis adipisci quam incidunt error molestias quaerat, consequuntur ipsum unde minima in soluta at ab, quia, minus commodi dignissimos? Modi, accusamus quidem iusto quis et ab soluta atque asperiores deleniti sequi eius consequuntur distinctio quae iste placeat obcaecati perspiciatis amet veniam!</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6"><img class="img-fluid" src="imgs/gumball.png" alt=""></div>
+    </div>
+    <div class="row align-items-center content">
+      <div class="col-md-6 order-2 order-md-1"><img class="img-fluid" src="imgs/sprinkles.png" alt=""></div>
+      <div class="col-md-6 text-center order-1 order-md-2">
+        <div class="row justify-content-center blob">
+          <div class="col-10 col-xl-8 mb-5 mb-md-0">
+            <h2>Sprinklers Time</h2>
+            <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem placeat necessitatibus nisi. Nihil rem quo dolorem ipsum provident porro unde praesentium sed enim. Voluptates perspiciatis adipisci quam incidunt error molestias quaerat, consequuntur ipsum unde minima in soluta at ab, quia, minus commodi dignissimos? Modi, accusamus quidem iusto quis et ab soluta atque asperiores deleniti sequi eius consequuntur distinctio quae iste placeat obcaecati perspiciatis amet veniam!</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js" integrity="sha512-/DXTXr6nQodMUiq+IUJYCt2PPOUjrHJ9wFrqpJ3XkgPNOZVfMok7cRw6CSxyCQxXn6ozlESsSh1/sMCTF1rL/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <!-- Bootstrap Javascript Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+  <script>
+    $(function() {
+      $(document).scroll(function() {
+        var $nav = $("#mainNav");
+        $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+      });
+    });
+  </script>
+
 </body>
 
 </html>
